# cookiecutter-poetry

./: README.md  cookiecutter.json
.husky/: pre-commit
{{cookiecutter.repo_name}}/: .gitignore  LICENSE  README.md  package.json  pyproject.toml  pyrightconfig.json  rundown.bat_
{{cookiecutter.repo_name}}/.github/workflows/: codeql-analysis.yml  routine-tests.sync-conflict-20230104-141514-ELXZZII.yml-  routine-tests.yml
{{cookiecutter.repo_name}}/.husky/: pre-commit
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.pack_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.pack_name}}/: __init__.py  __main__.py  {{cookiecutter.pack_name}}.py
