[tool.poetry]
name = "{{cookiecutter.pack_name}}"
version = "0.1.0"
description = "pack_name descr "
authors = ["{{cookiecutter.username}}"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/{{cookiecutter.username}}/{{cookiecutter.repo_name}}"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.7.3,<4.0"
logzero = "^1.7.0"
icecream = "^2.1.1"
install = "^1.3.5"

[tool.poe.executor]
type = "poetry"

[tool.poe.tasks]
memo = "echo poe test"
test = "pytest tests"
build = "poetry build"
_publish = "poetry publish"
release = ["test", "build", "_publish"]
lint = { cmd = "pylint {{cookiecutter.pack_name}}" }
format = "black tests {{cookiecutter.pack_name}}"
docstyle = "pydocstyle --convention=google tests {{cookiecutter.pack_name}}"
tunnel = {cmd = "ssh -CN ip_or_hostname_defined_in_hosts -L 9091:127.0.0.1:9091"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
pydocstyle = "^6.1.1"
# tbump = "^6.3.2"
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-modules"
log_cli = true
testpaths = [
    "tests",
    # "integration",
]

[tool.black]
skip-string-normalization = 1

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 88
ignore = "D203,E501"
extend-ignore = "E203,"
max-complexity = 25