[tool.poetry]
name = "{{cookiecutter.pack_name}}"
version = "0.1.0-alpha.0"
description = "{{cookiecutter.pack_name}}"
authors = ["{{cookiecutter.username}}"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/{{cookiecutter.username}}/{{cookiecutter.repo_name}}"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.0"
set-loglevel = "^0.1.2"
typer = "^0.4.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.278"
pytest = "^7.1"
flake8 = "^3.9.2"
isort = "^5.10.1"
black = "^22.3.0"
pylint = "^2.14.2"
pyright = "^1.1.254"
pydocstyle = "^6.1.1"
poethepoet = "^0.10.0"

[tool.poe.executor]
type = "poetry"

[tool.poe.tasks]
memo = "echo poe test or poetry run poe test"
test = "pytest tests"
pyright = "pyright {{cookiecutter.pack_name}}"
flake8 = "flake8 {{cookiecutter.pack_name}} --ignore F401,E501,F841"
check = ["pyright", "flake8"]
export = "poetry export --without-hashes -f requirements.txt -o requirements.txt"
build = "poetry build"
publish = "poetry publish"
release = ["test", "build", "publish"]
lint = { cmd = "pylint {{cookiecutter.pack_name}}" }
isort = "isort tests {{cookiecutter.pack_name}}"
black = "black tests {{cookiecutter.pack_name}}"
format = ["isort", "black"]
docstyle = "pydocstyle --convention=google tests {{cookiecutter.pack_name}}"
prerelease = {cmd = "poetry version prerelease && sync-version"}
tunnel = {cmd = "ssh -CN ip_or_hostname_defined_in_hosts -L 9091:127.0.0.1:9091"}

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^3.9.2"
isort = "^5.10.1"
black = "^22.3.0"
pylint = "^2.14.2"
pyright = "^1.1.254"
pydocstyle = "^6.1.1"
toml = "^0.10.2"
# tbump = "^6.3.2"
poethepoet = "^0.10.0"

[tool.poetry.scripts]
"{{cookiecutter.repo_name}}" = "{{cookiecutter.pack_name}}.__main__:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-modules"
log_cli = true
testpaths = [
    "tests",
    # "integration",
]

[tool.black]
skip-string-normalization = 0

[tool.isort]
profile = "black"
multi_line_output = 3
